<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/actionbar">
    
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/imgLogo"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_launcher"
        android:layout_alignParentTop="true"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imgLogo"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
         android:textSize="20sp"
         android:text="@string/title"
         android:textColor="@color/white"/>
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:padding="20dp">
         <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="15dp"
             android:text="@string/enter_name"
             android:textColor="@color/white"
             android:textSize="18dp"
             tools:ignore="SpUsage" />
         <android.support.design.widget.TextInputEditText
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/name"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:background="@color/white"
             android:inputType="textCapWords"
             android:padding="10dp"
             />
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/bg_btn_join"
             android:paddingLeft="25dp"
             android:paddingRight="25dp"
             android:text="@string/btn_join"
             android:textColor="@color/white"
             android:background="@color/bg_btn_join" />
     </LinearLayout>
</RelativeLayout>